--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apostrophe-pieces-import",
-  "version": "0.1.2",
+  "version": "2.0.0",
   "description": "Import pieces from CSV (and potentially other formats) as pieces in Apostrophe, with a nice UI",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,9 @@
   "dependencies": {
     "csv-parse": "^1.1.7",
     "cuid": "^1.3.8",
+    "fs-extra": "^1.0.0",
     "lodash": "^4.17.2",
-    "split": "^1.0.0"
+    "split": "^1.0.0",
+    "xlsx": "^0.8.1"
   }
 }
