--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apostrophe-pieces-import",
   "version": "2.0.0",
-  "description": "Import pieces from CSV (and potentially other formats) as pieces in Apostrophe, with a nice UI",
+  "description": "Import pieces from CSV, TSV, Excel and formats you add yourself as pieces in Apostrophe, with a nice UI",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
