Add keywords for better discoverability on NPM

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "keywords": [
     "apostrophe",
-    "cms",
-    "apostrophe",
+    "apostrophecms",
+    "apostrophe-cms",
+    "content-management",
+    "content-management-system",
     "cms",
     "csv"
   ],
