--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "apostrophe",
     "apostrophecms",
     "apostrophe-cms",
-    "content-management",
-    "content-management-system",
+    "content management",
+    "content management system",
     "cms",
     "csv"
   ],
