--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Import pieces from CSV, TSV, Excel and formats you add yourself as pieces in Apostrophe, with a nice UI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,11 @@
     "lodash": "^4.17.2",
     "split": "^1.0.0",
     "xlsx": "^0.8.1"
+  },
+  "devDependencies": {
+    "apostrophe": "^2.72.3",
+    "csv-stringify": "^5.1.0",
+    "mocha": "^5.2.0",
+    "request": "^2.88.0"
   }
 }
