--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apostrophe-pieces-import",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Import pieces from CSV, TSV, Excel and formats you add yourself as pieces in Apostrophe, with a nice UI",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "eslint . && mocha"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/punkave/apostrophe-pieces-import#readme",
   "dependencies": {
+    "async": "^2.6.1",
     "csv-parse": "^1.1.7",
     "cuid": "^1.3.8",
     "fs-extra": "^1.0.0",
@@ -35,6 +36,14 @@
     "apostrophe": "^2.72.3",
     "csv-stringify": "^5.1.0",
     "mocha": "^5.2.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "eslint": "^4.2.0",
+    "eslint-config-apostrophe": "^2.0.2",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
