--- a/package.json
+++ b/package.json
@@ -4,25 +4,23 @@
   "description": "Import pieces from CSV, TSV, Excel and formats you add yourself as pieces in Apostrophe, with a nice UI",
   "main": "index.js",
   "scripts": {
-    "test": "eslint . && mocha"
+    "test": "npx eslint . && mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/punkave/apostrophe-pieces-import.git"
+    "url": "git+https://github.com/apostrophecms/apostrophe-pieces-import.git"
   },
   "keywords": [
+    "apostrophecms",
     "apostrophe",
-    "cms",
-    "apostrophe",
-    "cms",
     "csv"
   ],
-  "author": "P'unk Avenue LLC",
+  "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/punkave/apostrophe-pieces-import/issues"
+    "url": "https://github.com/apostrophecms/apostrophe-pieces-import/issues"
   },
-  "homepage": "https://github.com/punkave/apostrophe-pieces-import#readme",
+  "homepage": "https://github.com/apostrophecms/apostrophe-pieces-import#readme",
   "dependencies": {
     "async": "^2.6.1",
     "csv-parse": "^4.8.5",
@@ -37,13 +35,12 @@
     "csv-stringify": "^5.1.0",
     "mocha": "^5.2.0",
     "request": "^2.88.0",
-    "eslint": "^4.2.0",
-    "eslint-config-apostrophe": "^2.0.2",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint": "^6.8.0",
+    "eslint-config-apostrophe": "^3.1.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
