--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:12-browsers
-      - image: mongo:latest
+      - image: mongo:4.4
     steps:
       - checkout
       - run:
