--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
   "devDependencies": {
     "apostrophe": "^2.72.3",
     "csv-stringify": "^5.1.0",
-    "mocha": "^5.2.0",
-    "request": "^2.88.0",
-    "eslint": "^6.8.0",
     "eslint-config-apostrophe": "^3.1.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^5.2.0",
+    "request": "^2.88.0"
   }
 }
