--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "apostrophe": "^2.72.3",
     "csv-stringify": "^5.1.0",
+    "eslint": "^7.26.0",
     "eslint-config-apostrophe": "^3.1.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
